--- a/views/usuarios/cadastro.ejs
+++ b/views/usuarios/cadastro.ejs
@@ -1,10 +1,5 @@
 <div class="container">
-    <h1>Cadastro de Usuários</h1>
-    <div>
-        <% if (typeof msg != "undefined") { %>             
-            <span  ><%= msg %></span>
-        <% } %>
-    </div>
+    <h1>Cadastro de Usuário</h1>
     <div>
         <form id="register-form">
             <div>
@@ -30,9 +25,9 @@
                     <label for="usuarioTipo" class="form-label">Tipo:</label>
                     <select class="form-control" id="usuarioTipo" name="usuarioTipo">
                         <option selected value="0">Selecione...</option>
-                        <option value="1">Administrador</option>
-                        <option value="2">Visitante</option>
-                        <option value="3">Normal</option>
+                        <% permissions.forEach((permission) => {%>
+                            <option value="<%= permission.permissionId %>"><%= permission.permissionName %></option>
+                        <% }); %>
                     </select>
                 </div>
             </div>
